[package]
name = "ngamahi-id-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

actix-web = "4"
awc = { version = "3.0", features = [ "rustls" ] }

serde = { version = "1.0.163", features = [ "derive" ] }
serde_json = "1.0"

base64 = "0.21.2"