[package]
name = "ngamahi-id-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

actix-web = "4"
awc = { version = "3.0", features = [ "rustls" ] }

serde = { version = "1.0.163", features = [ "derive" ] }
serde_json = "1.0"
serde_yaml = "0.9"

base64 = "0.21.2"
anyhow = "1.0.71"

atomic-waker = "1.1.1"
futures = "0.3.28"

log = "0.4.0"
log4rs = "1.2.0"


[profile.release]
strip = true
lto = true
codegen-units = 1